Fixed squished (#35)
* FRONTEND GODS HELP ME

* i just did it

---------

--- a/frontend/src/pages/landing-page/landing-page.css
+++ b/frontend/src/pages/landing-page/landing-page.css
@@ -1,3 +1,17 @@
+
+.landing-page-background-wrapper {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.background {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+
 .background-wrapper {
   position: relative;
   display: block;
@@ -14,7 +28,10 @@
   position: absolute;
   bottom: 0;
   left: 50%;
+  transform: translateX(-50%);
+
   transform: translateX(-100%);
+
   width: 118%;
   height: auto;
   z-index: 1;
