--- a/frontend/src/pages/sign-up/sign-up.css
+++ b/frontend/src/pages/sign-up/sign-up.css
@@ -1,11 +1,19 @@
+
+.sign-up-background-wrapper {
+
 .background-wrapper {
+
   position: relative;
   display: block;
   z-index: 0;
   width: 100%; /* Ensures the image spans the full width of the viewport */
   height: 100vh; /* Ensures the image stretches to cover the full height of the container */
   background-size: 100% auto; /* Stretches the image vertically while maintaining the width */
+
+  background-image: url('../../../assets/LandingPageBackground.svg');
+
   background-image: url('../assets/SignLoginBackground.svg');
+
   background-position: center; /* Keeps the image centered */
   background-repeat:repeat-y;
 }
